# DB_RealEstate_ChatAssistant

./: .breakpoints  BackOffice.py  Prompt.py  _Init_.py  additional_instructions.py  assistant.json  client.yaml  config.py  config.yaml  config_keys.py  core_functions.py  format_functions.py  functions.py  main.py  new_functions.py  propertySearch.py  pyproject.toml  test.py
lib/RepositoryPattern/: base_repository.py
lib/filter_repository/: filter_repo.py
lib/thread_repository/: thread_repo.py
lib/user_repository/: user_repo.py
